fixed issue with header not covering full width

--- a/css/resume-style.css
+++ b/css/resume-style.css
@@ -123,8 +123,7 @@ ul ul a {
     background-repeat: no-repeat;
     background-color: black;
     height: 240px;
-    padding-right: 10vh;
-    width: 120%;
+    width: 135%;
 }
 
 .info {
